# winload

./: .gitignore  aaafrom_gitgithubkelebot-pdf-genpy.venvScriptsActivate.ps1  readme.jp.md  readme.ko.md  readme.md  readme.zh-cn.md  readme.zh-tw.md
.github/workflows/: build.md  build.yml  build.zh-cn.md  bulid.zh-tw.md
docs/: win_loopback.md  win_loopback.zh-cn.md  win_loopback.zh-tw.md
docs/dev/: pypi手动发布捏.md  rust二进制手动发布捏.md
docs/install_scripts/: install.sh
npm/winload-rust-bin/: bin.js  index.js  package.json
py/: README.md  build_and_sync_readme.py  graph.py  i18n.py  main.py  pyproject.toml  stats.py  ui.py
rust/: Cargo.toml  build.py  build.rs  cargo.md  winload.exe.manifest
rust/src/: collector.rs  graph.rs  i18n.rs  loopback.rs  main.rs  stats.rs  ui.rs
