[project]
name = "winload"
version = "0.1.7-beta.2"
description = "Network Load Monitor - nload-like TUI tool for Windows"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "VincentZyu", email = "1830540513zyu@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=7.0",
    "windows-curses>=2.0; platform_system == 'Windows'",
]

[project.scripts]
winload = "main:main"

[project.urls]
Homepage = "https://github.com/VincentZyuApps/winload"
Repository = "https://github.com/VincentZyuApps/winload"
Issues = "https://github.com/VincentZyuApps/winload/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
