[package]
name = "winload"
version = "0.1.5-beta.3"
edition = "2021"
description = "Network Load Monitor — nload-like TUI tool for Windows/Linux/macOS"
license = "MIT"
readme = "../README.md"

[[bin]]
name = "winload"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
pcap = { version = "2", optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
], optional = true }

[features]
default = ["npcap", "etw"]
npcap = ["pcap"]
etw = ["windows-sys"]

[profile.release]
opt-level = 3
lto = true
strip = true
