[package]
name = "winload"
version = "0.1.7-rc.4"
edition = "2021"
description = "Network Load Monitor — nload-like TUI tool for Windows/Linux/macOS"
license = "MIT"
readme = "../readme.md"

[[bin]]
name = "winload"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
pcap = { version = "2", optional = true }

[features]
default = ["npcap"]
npcap = ["pcap"]

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
maintainer = "VincentZyu <vincentzyu233@gmail.com>"
copyright = "2025-2026, VincentZyu"
extended-description = """\
A lightweight, real-time CLI tool for monitoring \
network bandwidth and traffic. Cross-platform \
alternative to nload."""
depends = ""
section = "net"
priority = "optional"
assets = [
    ["target/release/winload", "usr/bin/winload", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/winload", dest = "/usr/bin/winload", mode = "755" },
]

[package.metadata.winres]
version = "0.1.0"

[package.metadata.winres.compatibility]
"win32-api-levels" = { base = "elevated" }
